[package]
name = "soroban-fuzz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Property-based fuzzing engine for Soroban smart contracts: generates Val-shaped inputs, drives contract calls, and checks storage invariants."

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
